--- a/Лр1/отчёт.md
+++ b/Лр1/отчёт.md
@@ -1,38 +1,60 @@
-# IntroML - Введение в машинное обучение
+# Отчет по анализу данных с использованием Pandas
 
-🤖 Учебный репозиторий для курса по машинному обучению для студентов
+## Описание проекта
+Анализ датасета "Adult" (Census Income), содержащего демографические данные и информацию о доходах населения.
 
-## О курсе
+## Цели проекта
+1. Освоение базовых операций с данными в Pandas
+2. Разработка навыков фильтрации, агрегации и статистического анализа
+3. Освоение визуализации данных с помощью Matplotlib и Seaborn
+4. Получение практического опыта работы с реальными данными
 
-Добро пожаловать на курс "Введение в Машинное Обучение"! Этот репозиторий является примером оформления работы по курсу.
+## Результаты анализа
 
-## Материалы курса
-Все материалы содержатся в нашем [Ноушене](https://www.notion.so/26a587986dc88096baa6ca929e7a1926?v=26a587986dc8802b988b000cae2fabec)
+### 📊 Демографическая статистика
+| Показатель | Значение |
+|------------|----------|
+| Мужчины | 21,790 |
+| Женщины | 10,771 |
+| Средний возраст мужчин | ~39.4 лет |
 
-## Формат обучения
+### 💰 Анализ доходов
+| Показатель | Значение |
+|------------|----------|
+| Средний возраст людей с доходом >50K | ~44.2 года |
+| Стандартное отклонение возраста (>50K) | ~10.5 лет |
+| Работающие 40 часов в США с доходом ≤50K | 10,493 человека |
 
-- **Лекции**: по вторникам, 11:35-12:55, ауд. 9-201
-- **Лабораторные работы**: по средам, 15:30-18:10, ауд. 1-114
+### 🎓 Образовательная статистика
+- Самое распространенное образование: HS-grad (10,501 человек)
+- Гипотеза проверена: Не все люди с доходом >50K имеют образование Bachelors+ ❌
 
-## Домашние задания
+### ⏱️ Анализ рабочего времени
+- Максимальное количество рабочих часов: 99
+- Люди с максимальной нагрузкой и доходом ≤50K: 60 человек
 
-К каждой лабораторной работе прилагается Jupyter Notebook с заданиями. По итогам курса у каждого студент должен быть репозиторий  
-Отчеты необходимо сдавать в форматах:
-- Markdown (`.md`)
-- LaTeX (`.tex`)
+### 📈 Возрастное распределение
+- Отрезков с >1600 значений: 11
+- Визуализация: Гистограмма с выделением значимых отрезков
 
+## Использованные технологии и методы
 
-## Связь с преподавателем
+### 📚 Библиотеки
+- Pandas - обработка и анализ данных
+- NumPy - математические операции
+- Matplotlib/Seaborn - визуализация данных
 
-- Telegram: [@sstatika](https://t.me/sstatika)
+### 🔧 Ключевые методы Pandas
+```python
+# Загрузка и базовые операции
+df = pd.read_csv('adult_data.csv')
+df.value_counts()
 
-## Как пользоваться репозиторием
+# Фильтрация и агрегация
+df[df['salary'] == '>50K']
+df['age'].mean()
+df['age'].std()
 
-1. Форкайте репозиторий
-2. Выполняйте лабораторные работы
-3. Делайте отчет в указаных форматах по итогам сделанной работы
-4. Задавайте вопросы через Telegram при необходимости
-
----
-
-*Для успешного прохождения курса рекомендуется регулярно посещать занятия и своевременно выполнять все задания.*
+# Анализ категориальных данных
+df['education'].value_counts()
+df['education'].isin(['Bachelors', 'Masters'])
