--- a/Лр1/отчёт.md
+++ b/Лр1/отчёт.md
@@ -11,40 +11,40 @@
 
 ## Результаты анализа
 
-### 📊 Демографическая статистика
+### Демографическая статистика
 | Показатель | Значение |
 |------------|----------|
 | Мужчины | 21,790 |
 | Женщины | 10,771 |
 | Средний возраст мужчин | ~39.4 лет |
 
-### 💰 Анализ доходов
+### Анализ доходов
 | Показатель | Значение |
 |------------|----------|
 | Средний возраст людей с доходом >50K | ~44.2 года |
 | Стандартное отклонение возраста (>50K) | ~10.5 лет |
 | Работающие 40 часов в США с доходом ≤50K | 10,493 человека |
 
-### 🎓 Образовательная статистика
+### Образовательная статистика
 - Самое распространенное образование: HS-grad (10,501 человек)
-- Гипотеза проверена: Не все люди с доходом >50K имеют образование Bachelors+ ❌
+- Гипотеза проверена: Не все люди с доходом >50K имеют образование Bachelors+ 
 
-### ⏱️ Анализ рабочего времени
+### Анализ рабочего времени
 - Максимальное количество рабочих часов: 99
 - Люди с максимальной нагрузкой и доходом ≤50K: 60 человек
 
-### 📈 Возрастное распределение
+### Возрастное распределение
 - Отрезков с >1600 значений: 11
 - Визуализация: Гистограмма с выделением значимых отрезков
 
 ## Использованные технологии и методы
 
-### 📚 Библиотеки
+### Библиотеки
 - Pandas - обработка и анализ данных
 - NumPy - математические операции
 - Matplotlib/Seaborn - визуализация данных
 
-### 🔧 Ключевые методы Pandas
+### Ключевые методы Pandas
 ```python
 # Загрузка и базовые операции
 df = pd.read_csv('adult_data.csv')
