--- a/Лр1/отчёт.md
+++ b/Лр1/отчёт.md
@@ -1,7 +1,7 @@
 # Отчет по анализу данных с использованием Pandas
 
 ## Описание проекта
-Анализ датасета "Adult" (Census Income), содержащего демографические данные и информацию о доходах населения.
+Анализ датасета "adult-data.csv", содержащего демографические данные и информацию о доходах населения.
 
 ## Цели проекта
 1. Освоение базовых операций с данными в Pandas
