--- a/Лр1/отчёт.md
+++ b/Лр1/отчёт.md
@@ -1,4 +1,4 @@
-# Отчет по анализу данных с использованием Pandas
+# Отчет по лр1 по анализу данных с использованием Pandas
 
 ## Описание проекта
 Анализ датасета "adult_data.csv", содержащего демографические данные и информацию о доходах населения.
