--- a/Лр1/отчёт.md
+++ b/Лр1/отчёт.md
@@ -58,3 +58,6 @@ df['age'].std()
 # Анализ категориальных данных
 df['education'].value_counts()
 df['education'].isin(['Bachelors', 'Masters'])
+```
+# Заключение
+Проект успешно продемонстрировал применение основных методов анализа данных в Python. Полученные результаты предоставляют ценную информацию о взаимосвязи демографических факторов и уровня доходов, а также подтверждают важность комплексного подхода к анализу данных.
